fix: notifier content alignment to left

--- a/app/component/itinerary/navigator/navigator.scss
+++ b/app/component/itinerary/navigator/navigator.scss
@@ -416,6 +416,7 @@ $fixed-width-padding: 16px;
     .navi-info-content {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       margin-left: 8px;
       margin-right: 8px;
       width: 100%;
